--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1208,6 +1208,10 @@
     <string name="guest_details">Guest details</string>
     <!-- Add traveler number template -->
     <string name="add_traveler_number_TEMPLATE">Traveler %1$s details</string>
+    <!-- Add adult traveler number template -->
+    <string name="add_adult_number_TEMPLATE">Adult %1$s details</string>
+    <!-- Add child traveler number template -->
+    <string name="add_child_number_TEMPLATE">Child %1$s details</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Boarding may be denied if traveler name does not match government-issued photo ID.</string>
 
